@@ -76,13 +76,13 @@ public final class TransientProperty implements IProperty, Serializable {
                 return svalue;
 
             case BOOLEAN:
-                return new Boolean(bvalue);
+                return Boolean.valueOf(bvalue);
 
             case INTEGER:
-                return new Long(lvalue);
+                return Long.valueOf(lvalue);
 
             case FLOAT:
-                return new Double(dvalue);
+                return Double.valueOf(dvalue);
 
             case DATE:
                 return new Date(lvalue);
